feat: added request data consume
