# src/admin/gateways/interfaces/controller-service.interfaces.ts
@@ -6,4 +6,6 @@ export interface AddGatewayInput {
   factoryId: string;
   tenantId: string;
   factoryKeyHash: string;
+  firmwareVersion: string;
+  model: string;
 }
